--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "cropperjs": "^1.5.1",
     "exif-js": "^2.3.0",
     "vue": "^2.6.10",
     "vuex": "^3.0.1"
